cmake_minimum_required(VERSION 3.2)

if (POLICY CMP0091)
  cmake_policy(SET CMP0091 NEW)
endif (POLICY CMP0091)

project(coroutines-cpp-mt)

set(CMAKE_CXX_STANDARD 20)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -O3")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(COROUTINES_CPP_MT_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(COROUTINES_CPP_MT_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(COROUTINES_CPP_MT_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(COROUTINES_CPP_MT_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/)

include_directories(${COROUTINES_CPP_MT_INSTALL_INCLUDE_DIR})
include_directories(${COROUTINES_CPP_MT_HEADERS_DIR})

add_subdirectory(src)
add_subdirectory(test)


